--- a/app.yaml
+++ b/app.yaml
@@ -14,7 +14,7 @@ handlers:
   script: auto
 
 entrypoint:
-  serve function/function.php
+  serve handler.php
 
 env_variables:
   CLOUDSQL USER: root
